polish schedule section and change cover photo

--- a/classes.html
+++ b/classes.html
@@ -105,6 +105,42 @@
                     <div class="day-header" data-i18n="classes:days.sun">Sun</div>
 
 
+                    <!-- 8:00 AM Row -->
+                    <!-- Time -->
+                    <div class="time-label">8:00</div>
+                    <!-- Monday -->
+                    <div class="grid-cell"></div>
+                    <!-- Tuesday -->
+                    <div class="grid-cell"></div>
+                    <!-- Wednesday -->
+                    <div class="grid-cell"></div>
+                    <!-- Thursday -->
+                    <div class="grid-cell"></div>
+                    <!-- Friday -->
+                    <div class="grid-cell">
+                        <div class="class-card class-card--aerial" data-style="aerial">
+                            <h3 class="class-name" data-i18n="classes:styles.aerial">Aerial Yoga</h3>
+                            <div class="class-meta">
+                                <span class="class-duration">
+                                    <i data-lucide="clock"></i>
+                                    <span>60 min</span>
+                                </span>
+                                <span class="class-location">
+                                    <i data-lucide="map-pin"></i>
+                                    <span data-i18n="classes:locations.aguacate">Aguacate Studio</span>
+                                </span>
+                            </div>
+                            <div class="teacher-banner">
+                                <img src="assets/photos/inUse/classes/aro.webp" alt="Aro" class="teacher-photo">
+                                <span class="teacher-name" data-i18n="classes:teachers.aro">Aro</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Saturday -->
+                    <div class="grid-cell"></div>
+                    <!-- Sunday -->
+                    <div class="grid-cell"></div>
+
                     <!-- 9:00 AM Row -->
                     <!-- Time -->
                     <div class="time-label">9:00</div>
@@ -125,7 +161,7 @@
                                 </span>
                             </div>
                             <div class="teacher-banner">
-                                <img src="assets/photos/teachers/itzel-mini.webp" alt="Itzel" class="teacher-photo">
+                                <img src="assets/photos/inUse/classes/itzel.webp" alt="Itzel" class="teacher-photo">
                                 <span class="teacher-name" data-i18n="classes:teachers.itzel">Itzel</span>
                             </div>
                         </div>
@@ -135,25 +171,7 @@
                     <!-- Thursday -->
                     <div class="grid-cell"></div>
                     <!-- Friday -->
-                    <div class="grid-cell">
-                        <div class="class-card class-card--aerial" data-style="aerial">
-                            <h3 class="class-name" data-i18n="classes:styles.aerial">Aerial Yoga</h3>
-                            <div class="class-meta">
-                                <span class="class-duration">
-                                    <i data-lucide="clock"></i>
-                                    <span>60 min</span>
-                                </span>
-                                <span class="class-location">
-                                    <i data-lucide="map-pin"></i>
-                                    <span data-i18n="classes:locations.aguacate">Aguacate Studio</span>
-                                </span>
-                            </div>
-                            <div class="teacher-banner">
-                                <img src="assets/photos/teachers/aro-mini.webp" alt="Aro" class="teacher-photo">
-                                <span class="teacher-name" data-i18n="classes:teachers.aro">Aro</span>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="grid-cell"></div>
                     <!-- Saturday -->
                     <div class="grid-cell"></div>
                     <!-- Sunday -->
@@ -187,7 +205,7 @@
                                 </span>
                             </div>
                             <div class="teacher-banner">
-                                <img src="assets/photos/teachers/dani-mini.webp" alt="Dani" class="teacher-photo">
+                                <img src="assets/photos/inUse/classes/dani.webp" alt="Dani" class="teacher-photo">
                                 <span class="teacher-name" data-i18n="classes:teachers.dani">Dani</span>
                             </div>
                         </div>
@@ -213,7 +231,7 @@
                                 </span>
                             </div>
                             <div class="teacher-banner">
-                                <img src="assets/photos/teachers/dani-mini.webp" alt="Dani" class="teacher-photo">
+                                <img src="assets/photos/inUse/classes/dani.webp" alt="Dani" class="teacher-photo">
                                 <span class="teacher-name" data-i18n="classes:teachers.dani">Dani</span>
                             </div>
                         </div>
@@ -235,7 +253,7 @@
                                 </span>
                             </div>
                             <div class="teacher-banner">
-                                <img src="assets/photos/teachers/aro-mini.webp" alt="Aro" class="teacher-photo">
+                                <img src="assets/photos/inUse/classes/aro.webp" alt="Aro" class="teacher-photo">
                                 <span class="teacher-name" data-i18n="classes:teachers.aro">Aro</span>
                             </div>
                         </div>
