redesign the CTA section in classes, finalizing the page

--- a/classes.html
+++ b/classes.html
@@ -303,6 +303,10 @@
                 <h2 data-i18n="classes:cta.title">Ready to Begin?</h2>
                 <p data-i18n="classes:cta.text">Join us for a class and discover the transformative power of yoga. Contact us to learn more about our schedule and upcoming sessions.</p>
                 <div class="cta-buttons">
+                    <a href="https://wa.me/525539061305" class="btn btn-elegant" target="_blank" rel="noopener noreferrer">
+                        <span data-i18n="classes:cta.whatsapp">WhatsApp Us</span>
+                        <i data-lucide="message-circle"></i>
+                    </a>
                     <a href="mailto:satgurprasaadyoga@gmail.com" class="btn btn-elegant">
                         <span data-i18n="classes:cta.contact">Contact Us</span>
                         <i data-lucide="mail"></i>
