--- a/events.html
+++ b/events.html
@@ -128,25 +128,25 @@
                     </div>
                 </div>
 
-                <!-- Event Card 3: 200-Hour Teacher Training -->
+                <!-- Event Card 3: 50-Hour Aerial Yoga Teacher Training -->
                 <div class="event-card" data-category="training" data-event="event3">
                     <div class="event-card-image">
-                        <img src="assets/photos/inUse/events/teacher-trainings-720.webp" alt="Teacher Training" loading="lazy">
+                        <img src="assets/photos/inUse/events/teacher-trainings-720.webp" alt="Aerial Yoga Teacher Training" loading="lazy">
                         <span class="event-badge training" data-i18n="events:events.event3.category">Teacher Training</span>
                     </div>
                     <div class="event-card-content">
-                        <h3 class="event-card-title" data-i18n="events:events.event3.title">200-Hour Yoga Teacher Training</h3>
+                        <h3 class="event-card-title" data-i18n="events:events.event3.title">50-Hour Aerial Yoga Teacher Training</h3>
                         <div class="event-card-meta">
                             <div class="event-meta-item">
                                 <i data-lucide="calendar" class="meta-icon"></i>
-                                <span data-i18n="events:events.event3.date">June 1 - July 20, 2025</span>
+                                <span data-i18n="events:events.event3.date">November 8 - December 14, 2025</span>
                             </div>
                             <div class="event-meta-item">
                                 <i data-lucide="map-pin" class="meta-icon"></i>
-                                <span data-i18n="events:events.event3.location">Roma Studio</span>
+                                <span data-i18n="events:events.event3.location">La Yoguitería, Calarca, Quindío, Colombia</span>
                             </div>
                         </div>
-                        <p class="event-card-description" data-i18n="events:events.event3.shortDescription">Comprehensive certification program for aspiring yoga teachers</p>
+                        <p class="event-card-description" data-i18n="events:events.event3.shortDescription">Become an aerial yoga teacher with our specialized training program.</p>
                     </div>
                 </div>
 
