--- a/events.html
+++ b/events.html
@@ -83,72 +83,9 @@
             </div>
             
             <!-- Event Cards Grid (Full-width scrolling) -->
-            <div class="events-grid">
-                <!-- Event Card 1: Breathwork Fundamentals -->
-                <div class="event-card" data-category="workshop" data-event="event1">
-                    <div class="event-card-image">
-                        <img src="assets/photos/inUse/events/workshops-720.webp" alt="Breathwork Workshop" loading="lazy">
-                        <span class="event-badge workshop" data-i18n="events:events.event1.category">Workshop</span>
-                    </div>
-                    <div class="event-card-content">
-                        <h3 class="event-card-title" data-i18n="events:events.event1.title">Breathwork Fundamentals</h3>
-                        <div class="event-card-meta">
-                            <div class="event-meta-item">
-                                <i data-lucide="calendar" class="meta-icon"></i>
-                                <span data-i18n="events:events.event1.date">March 15, 2025</span>
-                            </div>
-                            <div class="event-meta-item">
-                                <i data-lucide="map-pin" class="meta-icon"></i>
-                                <span data-i18n="events:events.event1.location">Roma Studio</span>
-                            </div>
-                        </div>
-                        <p class="event-card-description" data-i18n="events:events.event1.shortDescription">Learn ancient breathing techniques to calm the mind and energize the body</p>
-                    </div>
-                </div>
-
-                <!-- Event Card 2: Mountain Escape Weekend -->
-                <div class="event-card" data-category="retreat" data-event="event2">
-                    <div class="event-card-image">
-                        <img src="assets/photos/inUse/events/retreats-720.webp" alt="Mountain Retreat" loading="lazy">
-                        <span class="event-badge retreat" data-i18n="events:events.event2.category">Retreat</span>
-                    </div>
-                    <div class="event-card-content">
-                        <h3 class="event-card-title" data-i18n="events:events.event2.title">Mountain Escape Weekend</h3>
-                        <div class="event-card-meta">
-                            <div class="event-meta-item">
-                                <i data-lucide="calendar" class="meta-icon"></i>
-                                <span data-i18n="events:events.event2.date">April 20-22, 2025</span>
-                            </div>
-                            <div class="event-meta-item">
-                                <i data-lucide="map-pin" class="meta-icon"></i>
-                                <span data-i18n="events:events.event2.location">Valle de Bravo</span>
-                            </div>
-                        </div>
-                        <p class="event-card-description" data-i18n="events:events.event2.shortDescription">Three-day retreat combining yoga, meditation, and nature immersion</p>
-                    </div>
-                </div>
-
-                <!-- Event Card 3: 50-Hour Aerial Yoga Teacher Training -->
-                <div class="event-card" data-category="training" data-event="event3">
-                    <div class="event-card-image">
-                        <img src="assets/photos/inUse/events/teacher-trainings-720.webp" alt="Aerial Yoga Teacher Training" loading="lazy">
-                        <span class="event-badge training" data-i18n="events:events.event3.category">Teacher Training</span>
-                    </div>
-                    <div class="event-card-content">
-                        <h3 class="event-card-title" data-i18n="events:events.event3.title">50-Hour Aerial Yoga Teacher Training</h3>
-                        <div class="event-card-meta">
-                            <div class="event-meta-item">
-                                <i data-lucide="calendar" class="meta-icon"></i>
-                                <span data-i18n="events:events.event3.date">November 8 - December 14, 2025</span>
-                            </div>
-                            <div class="event-meta-item">
-                                <i data-lucide="map-pin" class="meta-icon"></i>
-                                <span data-i18n="events:events.event3.location">La Yoguitería, Calarca, Quindío, Colombia</span>
-                            </div>
-                        </div>
-                        <p class="event-card-description" data-i18n="events:events.event3.shortDescription">Become an aerial yoga teacher with our specialized training program.</p>
-                    </div>
-                </div>
+            <!-- Events are dynamically rendered by JavaScript from js/eventsData.js -->
+            <div class="events-grid" id="eventsGrid">
+                <!-- Events will be inserted here by events.js -->
             </div>
         </section>
 
@@ -319,6 +256,7 @@
     <!-- JavaScript Files -->
     <script src="js/i18n.js"></script>
     <script src="js/navbar.js"></script>
+    <script src="js/eventsData.js"></script>
     <script src="js/events.js"></script>
 </body>
 </html>
