improve event modal styling

--- a/events.html
+++ b/events.html
@@ -163,20 +163,40 @@
                     
                     <div class="modal-info-grid">
                         <div class="modal-info-item">
-                            <h4 data-i18n="events:modal.instructor">Instructor</h4>
-                            <p id="modalEventInstructor">Instructor name</p>
+                            <div class="modal-info-icon">
+                                <i data-lucide="user"></i>
+                            </div>
+                            <div class="modal-info-text">
+                                <h4 data-i18n="events:modal.instructor">Instructor</h4>
+                                <p id="modalEventInstructor">Instructor name</p>
+                            </div>
                         </div>
                         <div class="modal-info-item">
-                            <h4 data-i18n="events:modal.dateTime">Date & Time</h4>
-                            <p id="modalEventDateTime">Date and time</p>
+                            <div class="modal-info-icon">
+                                <i data-lucide="calendar-clock"></i>
+                            </div>
+                            <div class="modal-info-text">
+                                <h4 data-i18n="events:modal.dateTime">Date & Time</h4>
+                                <p id="modalEventDateTime">Date and time</p>
+                            </div>
                         </div>
                         <div class="modal-info-item">
-                            <h4 data-i18n="events:modal.location">Location</h4>
-                            <p id="modalEventLocation">Location</p>
+                            <div class="modal-info-icon">
+                                <i data-lucide="map-pin"></i>
+                            </div>
+                            <div class="modal-info-text">
+                                <h4 data-i18n="events:modal.location">Location</h4>
+                                <p id="modalEventLocation">Location</p>
+                            </div>
                         </div>
                         <div class="modal-info-item">
-                            <h4 data-i18n="events:modal.price">Investment</h4>
-                            <p id="modalEventPrice">Price</p>
+                            <div class="modal-info-icon">
+                                <i data-lucide="dollar-sign"></i>
+                            </div>
+                            <div class="modal-info-text">
+                                <h4 data-i18n="events:modal.price">Investment</h4>
+                                <p id="modalEventPrice">Price</p>
+                            </div>
                         </div>
                     </div>
                     
