--- a/about.html
+++ b/about.html
@@ -176,6 +176,18 @@
                 <p class="section-subtitle" data-i18n="about:teachers.subtitle">Experienced guides on your yoga journey</p>
             </div>
             
+            <!-- Scroll Indicators -->
+            <button class="teachers-scroll-indicator left" aria-label="Scroll left">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="15 18 9 12 15 6"></polyline>
+                </svg>
+            </button>
+            <button class="teachers-scroll-indicator right" aria-label="Scroll right">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="9 18 15 12 9 6"></polyline>
+                </svg>
+            </button>
+            
             <!-- Full-width scrolling grid outside container -->
             <div class="teachers-grid">
                     <!-- Teacher 1 -->
