improve classes page responsiveness

--- a/classes.html
+++ b/classes.html
@@ -266,6 +266,18 @@
 
         <!-- Legend Section -->
         <section class="legend-section">
+            <!-- Scroll Indicators -->
+            <button class="legend-scroll-indicator left" aria-label="Scroll left">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="15 18 9 12 15 6"></polyline>
+                </svg>
+            </button>
+            <button class="legend-scroll-indicator right" aria-label="Scroll right">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="9 18 15 12 9 6"></polyline>
+                </svg>
+            </button>
+            
             <div class="legend-scroll-container">
                  <div class="legend-item legend-item--aerial">
                     <div class="legend-content">
