--- a/events.html
+++ b/events.html
@@ -88,6 +88,18 @@
                 </div>
             </div>
             
+            <!-- Scroll Indicators -->
+            <button class="events-scroll-indicator left" aria-label="Scroll left">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="15 18 9 12 15 6"></polyline>
+                </svg>
+            </button>
+            <button class="events-scroll-indicator right" aria-label="Scroll right">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="9 18 15 12 9 6"></polyline>
+                </svg>
+            </button>
+            
             <!-- Event Cards Grid (Full-width scrolling) -->
             <!-- Events are dynamically rendered by JavaScript from js/eventsData.js -->
             <div class="events-grid" id="eventsGrid">
