--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                 <li><a href="about.html" class="navbar-link active" data-i18n="common:nav.about">About</a></li>
                 <li><a href="classes.html" class="navbar-link" data-i18n="common:nav.classes">Classes</a></li>
                 <li><a href="events.html" class="navbar-link" data-i18n="common:nav.events">Events</a></li>
-                <li><a href="blog.html" class="navbar-link" data-i18n="common:nav.blog">Blog</a></li>
+                <li><a href="/blog/dist/" class="navbar-link" data-i18n="common:nav.blog">Blog</a></li>
             </ul>
         </div>
         
@@ -339,7 +339,7 @@
                             <li><a href="about.html" data-i18n="common:footer.sitemap.about">About</a></li>
                             <li><a href="classes.html" data-i18n="common:footer.sitemap.classes">Classes</a></li>
                             <li><a href="events.html" data-i18n="common:footer.sitemap.events">Events</a></li>
-                            <li><a href="blog.html" data-i18n="common:footer.sitemap.blog">Blog</a></li>
+                            <li><a href="/blog/dist/" data-i18n="common:footer.sitemap.blog">Blog</a></li>
                         </ul>
                     </div>
 
