update the sitemap and robots.txt to reflect the language refactor
add canonical and hreflang tags to all static pages and the spanish html build script for better SEO

--- a/about.html
+++ b/about.html
@@ -25,6 +25,12 @@
     <meta name="twitter:description" content="Meet our passionate yoga teachers and learn about our philosophy. Discover Kundalini, Vinyasa, Hatha, and Aerial Yoga.">
     <meta name="twitter:image" content="https://www.sgpyoga.co/assets/photos/inUse/social/og-about.webp">
     
+    <!-- SEO: Canonical & Hreflang -->
+    <link rel="canonical" href="https://www.sgpyoga.co/about.html">
+    <link rel="alternate" hreflang="en" href="https://www.sgpyoga.co/about.html">
+    <link rel="alternate" hreflang="es" href="https://www.sgpyoga.co/es/about.html">
+    <link rel="alternate" hreflang="x-default" href="https://www.sgpyoga.co/about.html">
+    
     <!-- CSS Files -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/navbar.css">
