--- a/classes.html
+++ b/classes.html
@@ -25,6 +25,12 @@
     <meta name="twitter:description" content="Weekly yoga classes in CDMX. Join us for Aerial, Vinyasa, Hatha, and Kundalini Yoga. View our schedule!">
     <meta name="twitter:image" content="https://www.sgpyoga.co/assets/photos/inUse/social/og-classes.webp">
     
+    <!-- SEO: Canonical & Hreflang -->
+    <link rel="canonical" href="https://www.sgpyoga.co/classes.html">
+    <link rel="alternate" hreflang="en" href="https://www.sgpyoga.co/classes.html">
+    <link rel="alternate" hreflang="es" href="https://www.sgpyoga.co/es/classes.html">
+    <link rel="alternate" hreflang="x-default" href="https://www.sgpyoga.co/classes.html">
+    
     <!-- CSS Files -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/navbar.css">
