--- a/events.html
+++ b/events.html
@@ -25,6 +25,12 @@
     <meta name="twitter:description" content="Join transformative yoga workshops, retreats, and teacher training programs in CDMX.">
     <meta name="twitter:image" content="https://www.sgpyoga.co/assets/photos/inUse/social/og-events.webp">
     
+    <!-- SEO: Canonical & Hreflang -->
+    <link rel="canonical" href="https://www.sgpyoga.co/events.html">
+    <link rel="alternate" hreflang="en" href="https://www.sgpyoga.co/events.html">
+    <link rel="alternate" hreflang="es" href="https://www.sgpyoga.co/es/events.html">
+    <link rel="alternate" hreflang="x-default" href="https://www.sgpyoga.co/events.html">
+    
     <!-- CSS Files -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/navbar.css">
