--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
     <meta name="twitter:description" content="Transformative yoga classes, workshops, and retreats in CDMX. Experience Vinyasa, Hatha, Kundalini, and Aerial Yoga.">
     <meta name="twitter:image" content="https://www.sgpyoga.co/assets/photos/inUse/social/og-home.webp">
     
+    <!-- SEO: Canonical & Hreflang -->
+    <link rel="canonical" href="https://www.sgpyoga.co/index.html">
+    <link rel="alternate" hreflang="en" href="https://www.sgpyoga.co/index.html">
+    <link rel="alternate" hreflang="es" href="https://www.sgpyoga.co/es/index.html">
+    <link rel="alternate" hreflang="x-default" href="https://www.sgpyoga.co/index.html">
+    
     <!-- CSS Files -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/navbar.css">
