ensure hardcoded fallback text in html matches i18n locales for consistency and SEO

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-i18n="common:nav.home">SGP Yoga - Home</title>
-    <meta name="description" content="Find your inner peace in the heart of Mexico City" data-i18n="home:hero.subtitle">
+    <meta name="description" content="Find your place in the evolving world." data-i18n="home:hero.subtitle">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -104,8 +104,8 @@
             
             <!-- Hero content positioned in upper-left -->
             <div class="hero-content">
-                <h1 data-i18n="home:hero.welcome">Welcome to SGP Yoga</h1>
-                <p data-i18n="home:hero.subtitle">Find your inner peace in the heart of Mexico City</p>
+                <h1 data-i18n="home:hero.welcome">Breathe. Flow. Transform.</h1>
+                <p data-i18n="home:hero.subtitle">Find your place in the evolving world.</p>
             </div>
         </section>
 
@@ -377,7 +377,7 @@
                             <img src="assets/logo/logoMain.png" alt="SGP Yoga Logo" class="footer-logo">
                         </a>
                         <h3 data-i18n="common:footer.mission.title">Our Mission</h3>
-                        <p class="footer-mission-text" data-i18n="common:footer.mission.text">Guiding souls to discover their inner light through the transformative practice of yoga in the heart of Mexico City.</p>
+                        <p class="footer-mission-text" data-i18n="common:footer.mission.text">Guiding souls to discover their inner light through the transformative practice of yoga.</p>
                     </div>
 
                     <!-- Site Map Section -->
