--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-i18n="events:meta.title">SGP Yoga - Events</title>
-    <meta name="description" content="Join our transformative yoga workshops, retreats, and teacher training programs in Mexico City" data-i18n="events:meta.description">
+    <meta name="description" content="Join our transformative yoga workshops, retreats, and teacher training programs" data-i18n="events:meta.description">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -96,7 +96,7 @@
         <section id="upcoming-events" class="upcoming-events-section section-padding">
             <div class="container">
                 <h2 class="section-title" data-i18n="events:upcomingEvents.title">Upcoming Events</h2>
-                <p class="section-subtitle" data-i18n="events:upcomingEvents.subtitle">Transform your practice with our special events and immersive experiences</p>
+                <p class="section-subtitle" data-i18n="events:upcomingEvents.subtitle">We regularly offer themed workshops, transformative retreats, and comprehensive teacher trainings</p>
                 
                 <!-- Filter Controls -->
                 <div class="event-controls">
@@ -145,7 +145,7 @@
                     <div class="event-type-overlay">
                         <div class="event-type-content">
                             <h3 class="event-type-name" data-i18n="events:eventTypes.workshops.title">Workshops</h3>
-                            <p class="event-type-description" data-i18n="events:eventTypes.workshops.description">Deep-dive sessions exploring specific aspects of yoga practice, from advanced asanas to pranayama and philosophy</p>
+                            <p class="event-type-description" data-i18n="events:eventTypes.workshops.description">Our workshops are short but intensive sessions that explore specific aspects of yoga. We often blend physical exercise with breathwork, meditation, sound healing, and yogic philosophy - going beyond what's possible during a traditional class.</p>
                         </div>
                     </div>
                 </div>
@@ -160,7 +160,7 @@
                     <div class="event-type-overlay">
                         <div class="event-type-content">
                             <h3 class="event-type-name" data-i18n="events:eventTypes.retreats.title">Retreats</h3>
-                            <p class="event-type-description" data-i18n="events:eventTypes.retreats.description">Immersive multi-day experiences in beautiful locations, combining practice with rest, nature, and community</p>
+                            <p class="event-type-description" data-i18n="events:eventTypes.retreats.description">To us, a retreat is a step back from the hectic reality of our daily lives. Our retreats are tailored to help you heal & transform, at the same time giving you space to rest and regain balance.</p>
                         </div>
                     </div>
                 </div>
@@ -175,7 +175,7 @@
                     <div class="event-type-overlay">
                         <div class="event-type-content">
                             <h3 class="event-type-name" data-i18n="events:eventTypes.trainings.title">Teacher Trainings</h3>
-                            <p class="event-type-description" data-i18n="events:eventTypes.trainings.description">Comprehensive certification programs for aspiring teachers, covering all aspects of yoga instruction</p>
+                            <p class="event-type-description" data-i18n="events:eventTypes.trainings.description">The highest joy of a teacher is to see their students become wonderful yogis. Our teacher trainings give you all the tools you need to begin sharing the practice of yoga with the world. All our programmes come with an internationally-recognized Yoga Alliance certification and cover all the essential modules such as alignment, anatomy, philosophy, and more.</p>
                         </div>
                     </div>
                 </div>
