add local business info to index.html head for better SEO
optimize page title tags and meta descriptions for better SEO

--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-i18n="common:nav.about">SGP Yoga - About</title>
-    <meta name="description" content="Learn about our yoga philosophy, styles, teachers, and practice spaces in CDMX" data-i18n="about:meta.description">
+    <title data-i18n="common:pageTitles.about">About SGP Yoga - Kundalini, Vinyasa & Aerial Yoga CDMX</title>
+    <meta name="description" content="Meet SGP Yoga's passionate teachers in Mexico City. Explore our yoga philosophy and discover Kundalini, Vinyasa, Hatha & Aerial styles. Join our CDMX yoga community today!" data-i18n="about:meta.description">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
