--- a/classes.html
+++ b/classes.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-i18n="common:nav.classes">SGP Yoga - Classes</title>
-    <meta name="description" content="Explore our weekly yoga class schedule in Mexico City. Find your perfect practice time." data-i18n="classes:meta.description">
+    <title data-i18n="common:pageTitles.classes">Yoga Classes Schedule Mexico City | SGP Yoga CDMX</title>
+    <meta name="description" content="View our weekly yoga class schedule in Mexico City. Morning & evening Aerial, Vinyasa, Hatha & Kundalini sessions for all levels. Book your CDMX yoga class now!" data-i18n="classes:meta.description">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
