--- a/events.html
+++ b/events.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-i18n="events:meta.title">SGP Yoga - Events</title>
-    <meta name="description" content="Join our transformative yoga workshops, retreats, and teacher training programs" data-i18n="events:meta.description">
+    <title data-i18n="common:pageTitles.events">Yoga Workshops, Retreats & Teacher Training | SGP Yoga CDMX</title>
+    <meta name="description" content="Join transformative yoga workshops, multi-day retreats & teacher training in Mexico City. Deepen your practice with SGP Yoga. Limited spots in CDMX. Register now!" data-i18n="events:meta.description">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
