add automatic event metadata generation system for SEO

--- a/events.html
+++ b/events.html
@@ -321,5 +321,6 @@
     <script src="js/navbar.js"></script>
     <script src="js/eventsData.js"></script>
     <script src="js/events.js"></script>
+    <script src="js/eventSchema.js"></script>
 </body>
 </html>
