fix local bussiness SEO information missing fields

--- a/index.html
+++ b/index.html
@@ -572,6 +572,15 @@
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
       "name": "SGP Yoga",
+      "url": "https://www.sgpyoga.co",
+      "telephone": "+525539061305",
+      "priceRange": "$$",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Mexico City",
+        "addressRegion": "CDMX",
+        "addressCountry": "MX"
+      },
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "5.0",
